src/objects/Investigation__c.object
<CustomObject>
    <description>Investigations object is used to manage an investigation triggered by either a complaint, incident or 51A form</description>
    <fields>
        <fullName>All_Interventions_Done__c</fullName>
        <formula>Number_of_Interventions__c = Number_of_Interventions_Done__c</formula>
        <inlineHelpText>Checked if all interventions associated with this investigation are done</inlineHelpText>
        <label>All Interventions Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Task_Creation__c</fullName>
        <label>Approval Task Creation</label>
        <picklist>
            <picklistValues>
                <fullName>NonEscalated Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NonEscalated Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_As_a_Backup__c</fullName>
        <description>If the current user is assigned as a backup to the Investigation this formula will evaluate to TRUE, else FALSE</description>
        <formula>$User.Id =  Backup__r.Id</formula>
        <inlineHelpText>If the current user is assigned as a backup to the Investigation this formula will evaluate to TRUE, else FALSE</inlineHelpText>
        <label>Assigned As a Backup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <inlineHelpText>Date the Investigation was assigned to an investigator</inlineHelpText>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Id__c</fullName>
        <formula>Assigned_To__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Me_Or_My_Subordinates__c</fullName>
        <formula>OR( Assigned_to_Me__c ,
Assigned_To__r.ManagerId = $User.Id ,
Assigned_To__r.Manager.ManagerId = $User.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Me Or My Subordinates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Investigation can be assigned to a Licensor, Supervisor or Inspector</description>
        <inlineHelpText>User who will take the lead on the investigation.</inlineHelpText>
        <label>Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me__c</fullName>
        <description>This flag is used in reports to identify &quot;My&quot; investigations</description>
        <formula>$User.Id =  Assigned_To__c</formula>
        <label>Assigned to Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <description>This is used in Dashboard to identify who is assigned to the investigation: &quot;Me&quot; / &quot;Investigator&quot; / &quot;Licensor&quot;</description>
        <formula>IF($User.Id = Assigned_To__c, &quot;Assigned to me&quot;, IF(CONTAINS(Assigned_To__r.UserRole.Name, &quot;Investigator&quot;), &quot;Assigned To Another Investigator&quot;, &quot;Assigned to Licensor&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User that will be used as backup on this case. This user will receive / have the same access than the lead.</inlineHelpText>
        <label>Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_Backup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Investigation.Closed Date</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Investigation.Completed Date</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Corrective_Actions_Reminder_Date__c</fullName>
        <formula>IF(  isLegacyInvestigation__c, null , (TODAY() +  IF(ISNULL( Number_of_Days_to_Receive_Response__c ) = true, 0, Number_of_Days_to_Receive_Response__c) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corrective Actions Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cover_Letter_Issue_Date__c</fullName>
        <inlineHelpText>Date the cover letter was created in the system</inlineHelpText>
        <label>Cover Letter Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cover_Letter_Narrative__c</fullName>
        <inlineHelpText>This text will compose the cover letter. Salutations and signatures will be added by the system and does not need to be added here. To get the default text, please click on &quot;Set Narrative Default Values&quot; button.</inlineHelpText>
        <label>Cover Letter Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Created_on_the_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will determine if a report has been deployed/shown to the portal community.</description>
        <inlineHelpText>Check this box if you wish to deploy this Investigation to the Web Portal.</inlineHelpText>
        <label>Publish Report on Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Determinations__c</fullName>
        <label>Determinations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Investigation Type, Due Date and Intervention Type must be filled out when an Investigation is assigned</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalated_Investigation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this field is checked, it means that the investigation has been reviewed by Deputy Commissioner and has most likely been assigned to an Investigator. It will need to go through a full approval process of findings.</inlineHelpText>
        <label>Escalated Investigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility_Description__c</fullName>
        <label>Provider Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Follow_up_Actions_Recommendations__c</fullName>
        <label>Follow-up Actions Recommendations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InterventionsDoneAndCancelled__c</fullName>
        <label>InterventionsDoneAndCancelled</label>
        <summaryFilterItems>
            <field>Intervention__c.Status__c</field>
            <operation>equals</operation>
            <value>Done, Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Intervention__c.Investigation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Investigation_Activities__c</fullName>
        <label>Investigation Activities</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Investigation_Findings__c</fullName>
        <label>Investigation Findings</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Investigation_Status__c</fullName>
        <description>Investigation Status</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned - In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Report to send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Publish/Send to Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Legacy Investigation)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Investigation_Type__c</fullName>
        <description>Investigation Type, Due Date and Intervention Type must be filled out when an Investigation is assigned</description>
        <label>Investigation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regulatory Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Resolved by Licensee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_In_My_Region__c</fullName>
        <formula>Provider_No__r.User_In_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is In My Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leader_Deputy_Commisioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalated Inv - First Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leader_Investigation_Director</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leader_Director_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalated Inv - Second Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leader_Director_Supervisor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leader_Email__c</fullName>
        <formula>Assigned_To__r.Email</formula>
        <label>Leader Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leader_Is_An_Investigator__c</fullName>
        <description>If the Leader assigned to the investigation is an Investigator, this formula will evaluate to TRUE, else will be FALSE</description>
        <formula>IF( Assigned_To__r.UserRole.Name  = &quot;Investigator&quot;, TRUE, FALSE)</formula>
        <inlineHelpText>If the Leader assigned to the investigation is an Investigator, this formula will evaluate to TRUE, else will be FALSE</inlineHelpText>
        <label>Leader Is An Investigator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leader_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leader Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leader_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leader_Name_Text__c</fullName>
        <formula>Assigned_To__r.FirstName + &apos; &apos; + Assigned_To__r.LastName</formula>
        <label>Leader_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leader_Phone__c</fullName>
        <formula>Assigned_To__r.Phone</formula>
        <label>Leader Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leader_Title__c</fullName>
        <description>Leader Title</description>
        <formula>Assigned_To__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leader Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_FCC_LM_Mobile_Investigation__c</fullName>
        <description>Unique id of EECRS legacy records.</description>
        <label>Legacy_FCC_LM_Mobile_Investigation</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_IntakeID__c</fullName>
        <description>Used only in legacy Investigations as a reference when the legacy cases are migrated as this will be the key that will connect the uploaded Investigation to the Case</description>
        <label>Legacy IntakeID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Interaction__c</fullName>
        <description>Interaction Id from EECCRS for legacy data imported</description>
        <label>Legacy_System_Interaction</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensor_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager of the Licensor of the associated Provider. Used for correspondence during escalated approval process.</description>
        <label>Licensor Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lock_Investigation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked then Edits on a closed investigation are not authorized, Investigation must first be re-opened by a Supervisor or Director to be edited.</description>
        <label>Lock Investigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_compliances__c</fullName>
        <label>Non-compliances</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Note_to_User__c</fullName>
        <formula>IF(isLegacyInvestigation__c, &quot;Legacy Investigation, please be aware that some Non-compliance Items might appear to be duplicates.&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Note to User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_to_Receive_Response__c</fullName>
        <inlineHelpText>Number of days given to the provider to receive corrective actions plan.</inlineHelpText>
        <label>Number of Days to Receive Response</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Interventions_Done__c</fullName>
        <label>Number of Interventions Done</label>
        <summaryFilterItems>
            <field>Intervention__c.Status__c</field>
            <operation>equals</operation>
            <value>Done</value>
        </summaryFilterItems>
        <summaryForeignKey>Intervention__c.Investigation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Interventions__c</fullName>
        <label>Number of Interventions</label>
        <summaryForeignKey>Intervention__c.Investigation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Non_Compliant_items_Accepted__c</fullName>
        <label>Number of Non-Compliant items Accepted</label>
        <summaryFilterItems>
            <field>Non_Compliant__c.Correction_Plan_Status__c</field>
            <operation>equals</operation>
            <value>EEC Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>Non_Compliant__c.Investigation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Other_Non_Compliant_Items__c</fullName>
        <inlineHelpText>Number of Non Compliant items identified during the investigation, other than the ones from Visit</inlineHelpText>
        <label>Number of Other Non-Compliant Items</label>
        <summaryForeignKey>Non_Compliant__c.Investigation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Provider_Email__c</fullName>
        <description>Copies the email id from the Provider record so it can be used as a Recipient in workflows on the Investigation object</description>
        <label>Provider Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider_Id__c</fullName>
        <formula>Provider_No__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_No__c</fullName>
        <description>Provider.Provider No links the parent Provider (Account) record to the child Investigation record</description>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Investigations</relationshipLabel>
        <relationshipName>Investigations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason_for_Investigation__c</fullName>
        <label>Reason for Investigation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_To_Complaint_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related To Complaint Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_to_51A__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this investigation is associated to a 51A Report.</inlineHelpText>
        <label>Related to 51A Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Narrative_Issue_Date__c</fullName>
        <inlineHelpText>Date the report narrative was issued last</inlineHelpText>
        <label>Report Narrative Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Require_Portal_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows for Licensor/Investigator to specify if a feedback is to be sent to the Provider via email to request a review of non-compliance items</description>
        <inlineHelpText>Check this field if an email is required to be sent to the Provider to request a review of non-compliant items</inlineHelpText>
        <label>Require Portal Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <label>Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Statement_of_non_compliance_Issue_Date__c</fullName>
        <inlineHelpText>Date the statement of non-compliance was last generated</inlineHelpText>
        <label>Statement of non-compliance Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Escalation_Approver_Email_Address__c</fullName>
        <description>Email address of 1st escalation approver on the case. used as an email field when email alerts have to be sent to 1st escalation owner upon approved or rejected escalated investigations</description>
        <inlineHelpText>Email address of 1st escalation approver on the case. used as an email field when email alerts have to be sent to 1st escalation owner upon approved or rejected escalated investigations</inlineHelpText>
        <label>1st Escalation Approver Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>isLegacyInvestigation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to indicate that this is a legacy investigation.</description>
        <inlineHelpText>This is to indicate that this is a legacy investigation.</inlineHelpText>
        <label>isLegacyInvestigation</label>
        <type>Checkbox</type>
    </fields>
    <label>Investigation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>Escalated_Investigation__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Number_of_Interventions__c</columns>
        <columns>Number_of_Interventions_Done__c</columns>
        <filterScope>Everything</filterScope>
        <label>Invest. - All</label>
    </listViews>
    <listViews>
        <fullName>AllMy</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>Escalated_Investigation__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Number_of_Interventions__c</columns>
        <columns>Number_of_Interventions_Done__c</columns>
        <filterScope>Mine</filterScope>
        <label>All My Investigation</label>
    </listViews>
    <listViews>
        <fullName>All_My_Escalated_Open</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>Escalated_Investigation__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Number_of_Interventions__c</columns>
        <columns>Number_of_Interventions_Done__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Investigation_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Escalated_Investigation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Prov. Invest. - Open and Escalated</label>
    </listViews>
    <listViews>
        <fullName>All_My_Open</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>Escalated_Investigation__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Number_of_Interventions__c</columns>
        <columns>Number_of_Interventions_Done__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Investigation_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>My Prov. Invest. - Open</label>
    </listViews>
    <listViews>
        <fullName>All_My_Prov</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>Escalated_Investigation__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Number_of_Interventions__c</columns>
        <columns>Number_of_Interventions_Done__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Prov. Invest. - All</label>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>Escalated_Investigation__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Number_of_Interventions__c</columns>
        <columns>Number_of_Interventions_Done__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Investigation_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Invest. - Open</label>
    </listViews>
    <listViews>
        <fullName>AnneC_Esc_and_Reg3</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>Investigation_Type__c</columns>
        <columns>Escalated_Investigation__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Licensor_Manager__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Leader_Is_An_Investigator__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Is_In_My_Region__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Investigation_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>AnneC-Open Escalated Inv &amp; Reg3 Inv</label>
        <sharedTo>
            <role>Regional_Director</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Escalated_Investigation</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>Investigation_Type__c</columns>
        <columns>Escalated_Investigation__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Escalated_Investigation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Investigation_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open Escalated Investigation</label>
    </listViews>
    <listViews>
        <fullName>Legacy_Investigations</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>Escalated_Investigation__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Number_of_Interventions__c</columns>
        <columns>Number_of_Interventions_Done__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Investigation_Status__c</field>
            <operation>equals</operation>
            <value>Closed (Legacy Investigation)</value>
        </filters>
        <label>Legacy Investigations</label>
    </listViews>
    <listViews>
        <fullName>My_ALL</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>Escalated_Investigation__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Number_of_Interventions__c</columns>
        <columns>Number_of_Interventions_Done__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Invest. - All</label>
    </listViews>
    <listViews>
        <fullName>My_Escalated_Investigation</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>Investigation_Type__c</columns>
        <columns>Escalated_Investigation__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Escalated_Investigation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Investigation_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Invest. - Open and Escalated</label>
    </listViews>
    <listViews>
        <fullName>My_Open</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>Escalated_Investigation__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Number_of_Interventions__c</columns>
        <columns>Number_of_Interventions_Done__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Investigation_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Invest. - Open</label>
    </listViews>
    <listViews>
        <fullName>My_Prov_Status_Closed</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>Escalated_Investigation__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Investigation_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>My Prov. Invest. - Closed</label>
    </listViews>
    <listViews>
        <fullName>My_Region_ALL</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>Escalated_Investigation__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Number_of_Interventions__c</columns>
        <columns>Number_of_Interventions_Done__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_In_My_Region__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Region Invest. - All</label>
    </listViews>
    <listViews>
        <fullName>My_Region_Open</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>Escalated_Investigation__c</columns>
        <columns>Investigation_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Number_of_Interventions__c</columns>
        <columns>Number_of_Interventions_Done__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_In_My_Region__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Investigation_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>My Region Invest. - Open</label>
    </listViews>
    <nameField>
        <displayFormat>Inv# {000000}</displayFormat>
        <label>Investigation No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Allow_Assigned_To_Backup_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!ISNEW(),OR(ISCHANGED(Assigned_To__c),ISCHANGED(Backup__c)),!ISBLANK($UserRole.Name),!CONTAINS($UserRole.Name,&apos;Director&apos;), !CONTAINS($UserRole.Name,&apos;Supervisor&apos;), $User.Id!= Provider_No__r.OwnerId)</errorConditionFormula>
        <errorMessage>You&apos;re not authorized to change this investigation assignment, please contact your supervisor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>At_least_one_intervetion_must_be_done</fullName>
        <active>true</active>
        <description>At least one intervention must be in status &quot;Done&quot; or &quot;Cancelled&quot;</description>
        <errorConditionFormula>AND(
OR(ISNEW(), ISCHANGED(Investigation_Status__c)),
ISPICKVAL(Investigation_Status__c, &apos;Closed&apos;),
 All_Interventions_Done__c  = FALSE
)</errorConditionFormula>
        <errorMessage>An investigation can not be closed if at least one intervention is not done or cancelled. Review the status of your intervention before trying to close</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Backup_with_Leader</fullName>
        <active>true</active>
        <description>If a backup user is defined without a leader being defined an error should be trigger</description>
        <errorConditionFormula>AND(NOT(Backup__c=&quot;&quot;), Assigned_To__c =&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Assigned_To__c</errorDisplayField>
        <errorMessage>A backup investigator can not be defined if the lead investigator is unknown. Fill the lead investigator user before saving.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_go_from_new_to_closed</fullName>
        <active>true</active>
        <description>An investigation cannot go from new, assigned or pending to closed.</description>
        <errorConditionFormula>AND( 
OR(ISNEW(), ISCHANGED(Investigation_Status__c)), 
ISPICKVAL(Investigation_Status__c, &apos;Closed&apos;),
OR (
ISPICKVAL(PRIORVALUE(Investigation_Status__c), &apos;New&apos;),
ISPICKVAL(PRIORVALUE(Investigation_Status__c), &apos;Assigned - In Progress&apos;),
ISPICKVAL(PRIORVALUE(Investigation_Status__c), &apos;Pending Approval&apos;)
)
)</errorConditionFormula>
        <errorMessage>An investigation cannot go from &apos;New&apos;, &apos;Assigned - In Progress&apos;, or &apos;Pending Approval&apos; to closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_have_cover_letter_issue_date_to_clo</fullName>
        <active>true</active>
        <description>A cover letter must be generated to close a report.</description>
        <errorConditionFormula>AND(
OR(ISNEW(), ISCHANGED(Investigation_Status__c)),
ISPICKVAL(Investigation_Status__c, &apos;Closed&apos;),
ISBLANK(Cover_Letter_Issue_Date__c)
)</errorConditionFormula>
        <errorMessage>An investigation can not be closed if the report has not been generated and sent</errorMessage>
    </validationRules>
</CustomObject>